# a-field-of-sp

./: README.md  pyproject.toml
app/: __init__.py
app/lib/: browser.py  core.py  factory.py  globals.py  nodejs.py  threads.py  time.py
app/ui/: about_software_ui.py  add_note_ui.py  create_unit_ui.py  edit_at_user_ui.py  edit_config_ui.py  import_note_ui.py  import_user_ui.py  main_window_ui.py  manual_create_user_ui.py  mobile_create_user_ui.py  note_manage_ui.py  qrcode_create_user_ui.py  train_account_settings_ui.py  unit_configer_ui.py  user_manage_ui.py
app/utils/: auth.py  logger.py  math.py  pcid.py  string.py
app/view/: about_software.py  add_note.py  at_user_manage.py  create_unit.py  create_user.py  edit_at_user.py  edit_comment.py  edit_config.py  import_note.py  import_user.py  log_view.py  main_window.py  note_manage.py  preload_view.py  train_account_settings.py  unit_configer.py  user_manage.py  user_protocol.py
docs/: DOC.md
